ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.8
    • Affects Version/s: 3.1.7
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      2015-08-25T14:22:47.068+0000 D SHARDING [Balancer] moveChunk result: { ok: 1.0 }
      2015-08-25T14:22:47.068+0000 I SHARDING [conn1] ChunkManager: time to load chunks for test.bar: 2ms sequenceNumber: 300 version: 50|1||55dc79f615815627fb40d104 based on: 49|1||55dc79f615815627fb40d104
      2015-08-25T14:22:47.069+0000 I SHARDING [Balancer] ChunkManager: time to load chunks for test.bar: 0ms sequenceNumber: 301 version: 50|1||55dc79f615815627fb40d104 based on: 49|1||55dc79f615815627fb40d104
      2015-08-25T14:22:47.070+0000 W SHARDING [conn1] chunk manager reload forced for collection 'test.bar', config version is 50|1||55dc79f615815627fb40d104
      2015-08-25T14:22:47.070+0000 I -        [conn1] Invariant failure cmOpTime >= ci.getCM()->getConfigOpTime() src/mongo/s/config.cpp 418
      2015-08-25T14:22:47.070+0000 I -        [conn1]
      
      ***aborting after invariant() failure
      
      
      2015-08-25T14:22:47.070+0000 D SHARDING [Balancer] *** end of balancing round
      2015-08-25T14:22:47.072+0000 I SHARDING [Balancer] distributed lock with ts: 55dc7a3615815627fb40d166' unlocked.
      2015-08-25T14:22:47.082+0000 F -        [conn1] Got signal: 6 (Aborted).
      
       0xb887f2 0xb87959 0xb88162 0x7f69182becb0 0x7f6917f270d5 0x7f6917f2a83b 0xb17c6b 0xaaed5d 0xaaedd3 0x6c651e 0x6cbe38 0x6cc786 0xad56e8 0xa72830 0xa6fb66 0xac75e1 0xac82a9 0xad4a36 0xac6a9c 0x63c5de 0xb37b35 0x7f69182b6e9a 0x7f6917fe438d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"7887F2"},{"b":"400000","o":"787959"},{"b":"400000","o":"788162"},{"b":"7F69182AF000","o":"FCB0"},{"b":"7F6917EF1000","o":"360D5"},{"b":"7F6917EF1000","o":"3983B"},{"b":"400000","o":"717C6B"},{"b":"400000","o":"6AED5D"},{"b":"400000","o":"6AEDD3"},{"b":"400000","o":"2C651E"},{"b":"400000","o":"2CBE38"},{"b":"400000","o":"2CC786"},{"b":"400000","o":"6D56E8"},{"b":"400000","o":"672830"},{"b":"400000","o":"66FB66"},{"b":"400000","o":"6C75E1"},{"b":"400000","o":"6C82A9"},{"b":"400000","o":"6D4A36"},{"b":"400000","o":"6C6A9C"},{"b":"400000","o":"23C5DE"},{"b":"400000","o":"737B35"},{"b":"7F69182AF000","o":"7E9A"},{"b":"7F6917EF1000","o":"F338D"}],"processInfo":{ "mongodbVersion" : "3.1.8-pre-", "gitVersion" : "07728dc1e6721a3fe7c410fbb9ed28c316afe09b", "compiledModules" : [], "uname" : { "sysname" : "Linux", "release" : "3.2.0-36-virtual", "version" : "#57-Ubuntu SMP Tue Jan 8 22:04:49 UTC 2013", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000", "buildId" : "65BF7108929B8EA382D746300B2AAA5B595EA4A2" }, { "b" : "7FFF604CA000", "elfType" : 3, "buildId" : "D39640704AEBFFE0EEC507D675D54D080AD6D17A" }, { "b" : "7F69194C5000", "path" : "/lib/x86_64-linux-gnu/libssl.so.1.0.0", "elfType" : 3, "buildId" : "F3B79BB43F32F0567EF507E1480834663CFEB6D8" }, { "b" : "7F69190EA000", "path" : "/lib/x86_64-linux-gnu/libcrypto.so.1.0.0", "elfType" : 3, "buildId" : "1847BD9E3F572F81BECC6124C1F785CBC5F63DE0" }, { "b" : "7F6918EE2000", "path" : "/lib/x86_64-linux-gnu/librt.so.1", "elfType" : 3, "buildId" : "352C5B373A50E6C4AB881A5DB6F5766FDF81EEE0" }, { "b" : "7F6918CDE000", "path" : "/lib/x86_64-linux-gnu/libdl.so.2", "elfType" : 3, "buildId" : "D181AF551DBBC43E9D55913D532635FDE18E7C4E" }, { "b" : "7F69189DE000", "path" : "/usr/lib/x86_64-linux-gnu/libstdc++.so.6", "elfType" : 3, "buildId" : "B534DA725D06A04267EB2FEB92B9CC14C838B57B" }, { "b" : "7F69186E2000", "path" : "/lib/x86_64-linux-gnu/libm.so.6", "elfType" : 3, "buildId" : "3CD696AF1C2A66D38B949CB0D1D2A218B3ED858B" }, { "b" : "7F69184CC000", "path" : "/lib/x86_64-linux-gnu/libgcc_s.so.1", "elfType" : 3, "buildId" : "ECF322A96E26633C5D10F18215170DD4395AF82C" }, { "b" : "7F69182AF000", "path" : "/lib/x86_64-linux-gnu/libpthread.so.0", "elfType" : 3, "buildId" : "C340AF9DEE97C17C730F7D03693286C5194A46B8" }, { "b" : "7F6917EF1000", "path" : "/lib/x86_64-linux-gnu/libc.so.6", "elfType" : 3, "buildId" : "AA64A66AC46BFF200848C0A0694011BD0140AB4E" }, { "b" : "7F6919723000", "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3, "buildId" : "E25AD1A11CCF57E734116B8EC9C69F643DCA9F18" }, { "b" : "7F6917CDA000", "path" : "/lib/x86_64-linux-gnu/libz.so.1", "elfType" : 3, "buildId" : "F695ECFCF3918D5D34989398A14B7ECDD9F46CD0" } ] }}
       mongos(_ZN5mongo15printStackTraceERSo+0x32) [0xb887f2]
       mongos(+0x787959) [0xb87959]
       mongos(+0x788162) [0xb88162]
       libpthread.so.0(+0xFCB0) [0x7f69182becb0]
       libc.so.6(gsignal+0x35) [0x7f6917f270d5]
       libc.so.6(abort+0x17B) [0x7f6917f2a83b]
       mongos(_ZN5mongo15invariantFailedEPKcS1_j+0xCB) [0xb17c6b]
       mongos(+0x6AED5D) [0xaaed5d]
       mongos(_ZN5mongo8DBConfig23getChunkManagerIfExistsEPNS_16OperationContextERKSsbb+0x73) [0xaaedd3]
       mongos(_ZN5mongo27ParallelSortClusteredCursor14_handleStaleNSEPNS_16OperationContextERKNS_15NamespaceStringEbb+0x10E) [0x6c651e]
       mongos(_ZN5mongo27ParallelSortClusteredCursor10finishInitEPNS_16OperationContextE+0x388) [0x6cbe38]
       mongos(_ZN5mongo27ParallelSortClusteredCursor10finishInitEPNS_16OperationContextE+0xCD6) [0x6cc786]
       mongos(_ZN5mongo8Strategy9commandOpEPNS_16OperationContextERKSsRKNS_7BSONObjEiS4_S7_PSt6vectorINS0_13CommandResultESaIS9_EE+0x128) [0xad56e8]
       mongos(+0x672830) [0xa72830]
       mongos(+0x66FB66) [0xa6fb66]
       mongos(_ZN5mongo7Command22execCommandClientBasicEPNS_16OperationContextEPS0_RNS_11ClientBasicEiPKcRNS_7BSONObjERNS_14BSONObjBuilderE+0x701) [0xac75e1]
       mongos(_ZN5mongo7Command20runAgainstRegisteredEPNS_16OperationContextEPKcRNS_7BSONObjERNS_14BSONObjBuilderEi+0x2D9) [0xac82a9]
       mongos(_ZN5mongo8Strategy15clientCommandOpEPNS_16OperationContextERNS_7RequestE+0x1E6) [0xad4a36]
       mongos(_ZN5mongo7Request7processEPNS_16OperationContextEi+0x50C) [0xac6a9c]
       mongos(_ZN5mongo21ShardedMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortE+0x5E) [0x63c5de]
       mongos(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x265) [0xb37b35]
       libpthread.so.0(+0x7E9A) [0x7f69182b6e9a]
       libc.so.6(clone+0x6D) [0x7f6917fe438d]
      -----  END BACKTRACE  -----
      

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: