SERVER-20210 opTime invariant failure during chunk refresh